--- a/app/assets/stylesheets/base/_basic.scss
+++ b/app/assets/stylesheets/base/_basic.scss
@@ -94,49 +94,6 @@
 	}
 }
 
-.search {
-	display: inline-block;
-	position: relative;
-
-	&:after {
-		content: "";
-		width: 16px;
-		height: 16px;
-		@include background("icons/search.svg", "icon");
-		position: absolute;
-		right: 15px;
-		top: 10px;
-	}
-
-	input[type="text"], input[type="number"], input[type="search"] {
-		padding: 10px 46px 10px 15px;
-		border: solid 2px transparent;
-		border-radius: 5px;
-		font-size: .75em;
-		width: 100%;
-		@include prefix(transition, .5s cubic-bezier(.075,.82,.165,1));
-
-		&:hover {
-			border-color: rgba($dark-blue, .75);
-		}
-	}
-
-	input[type="submit"] {
-		display: none;
-		position: absolute;
-		right: 1px;
-		top: 50%;
-		height: calc(100% - 2px);
-		cursor: pointer;
-		width: 120px;
-		@include prefix(transform, translateY(-50%));
-		border-radius: 50px;
-		text-transform: uppercase;
-		font-weight: 600;
-		@include prefix(transition, all 250ms);
-	}
-}
-
 .img {
 	display: inline-block;
 	width: 50px;
@@ -222,17 +179,13 @@
 
 		.container-header {
 			.header-title {
-				font-size: 1.5em;
+				font-size: 2em;
+				line-height: 20px;
 
 				span {
 					font-weight: 600;
 					font-style: italic;
 				}
-			}
-
-			.header-subtitle {
-				font-size: .75em;
-				margin-bottom: -5px;
 			}
 		}
 	}
@@ -257,10 +210,6 @@ dl {
 		border-top: solid 1px rgba(0, 0, 0, 0.1);
 	}
 
-	dt, dd {
-		font-size: .9em;
-	}
-
 	dt {
 		width: 200px;
 	}
@@ -269,4 +218,64 @@ dl {
 		width: calc(100% - 200px);
 		font-weight: bold;
 	}
+}
+
+.options {
+  position: relative;
+
+  .options-btn {
+    img {
+      width: 16px;
+      height: 16px;
+    }
+  }
+
+  ul {
+  	padding: 5px;
+    z-index: 999;
+    display: none;
+    list-style: none;
+    position: absolute;
+    top: calc(100% + 10px);
+    right: 0;
+    background-color: $primary-color;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+    &:before, &:after {
+      content: "";
+      position: absolute;
+      border-left: solid 6px transparent;
+      border-right: solid 6px transparent;
+      bottom: 100%;
+    }
+
+    &:before {
+      right: 6px;
+      bottom: 100%;
+      border-bottom: solid 6px #fff;
+      z-index: 3;
+    }
+
+    &:after {
+      right: 5px;
+      border-bottom: solid 6px #d6d6d6;
+      z-index: 2;
+    }
+
+    li a {
+      display: block;
+      padding: 10px 15px;
+      @include prefix(transition, .25s cubic-bezier(.075,.82,.165,1));
+      white-space: nowrap;
+      border-radius: 5px;
+      color: #aaa;
+      font-weight: 600;
+
+      &:hover {
+        background-color: $dark-blue;
+        color: $primary-color;
+      }
+    }
+  }
 }
