--- a/app/assets/stylesheets/core/_form.scss
+++ b/app/assets/stylesheets/core/_form.scss
@@ -36,7 +36,6 @@
 			border: solid 2px rgba(0, 0, 0, 0.3);
 			border-radius: 5px;
 			padding: 5px 15px;
-			font-size: .75em;
 			font-weight: 600;
 			min-width: 11em;
 			text-align: center;
@@ -66,6 +65,7 @@
 		label, input, select, textarea {
 			display: block;
 			width: 100%;
+			font-size: 1em;
 		}
 
 		input[type="date"] {
@@ -98,7 +98,7 @@
 			background-color: white;
 			color: #000000;
 			border: solid 2px transparent;
-			@include prefix(transition, .5s cubic-bezier(.075,.82,.165,1));
+			@include prefix(transition, .25s cubic-bezier(.075,.82,.165,1));
 
 			&:focus, &:hover {
 				border-color: rgba($dark-blue, 0.75);
@@ -172,7 +172,7 @@
 					border: solid 1px #aaa;
 					margin-right: 10px;
 					border-radius: 50%;
-					@include prefix(transition, .5s cubic-bezier(.075,.82,.165,1));
+					@include prefix(transition, .25s cubic-bezier(.075,.82,.165,1));
 				}
 
 				&:hover:after, &.checked:after {
@@ -232,7 +232,6 @@
 	  background-color: $primary-color;
 	  color: #000000;
 	  padding: 10px 30px 10px 15px;
-	  font-size: .75em;
 	  overflow: hidden;
 	  white-space: nowrap;
 	  text-overflow: ellipsis;
@@ -241,6 +240,7 @@
 	  position: relative;
 	  min-height: 40px;
 	  text-align: left;
+	  @include prefix(transition, .25s cubic-bezier(.075,.82,.165,1));
 
 	  &:hover {
 	  	border-color: rgba($dark-blue, .75); 
@@ -291,7 +291,6 @@
 	  max-height: 300px;
 	  overflow-y: auto;
 	  border-radius: 5px;
-	  font-size: .75em;
 	  text-align: left;
 	  padding: 5px;
 	  font-weight: 600;
@@ -319,15 +318,71 @@
 	.form-options {
 		width: 100%;
 		margin-bottom: 15px;
+	}
+}
 
-		.link {
-			font-size: .9em;
+.search {
+	display: inline-block;
+	position: relative;
+
+	&:after {
+		content: "";
+		width: 16px;
+		height: 16px;
+		@include background("icons/search.svg", "icon");
+		position: absolute;
+		right: 15px;
+		top: 10px;
+	}
+
+	input {
+		padding: 10px 47px 10px 15px;
+		border: solid 2px transparent;
+		border-radius: 5px;
+		font-size: 1em;
+		width: 100%;
+		@include prefix(transition, .25s cubic-bezier(.075,.82,.165,1));
+
+		&:hover {
+			border-color: rgba($dark-blue, .75);
+		}
+	}
+
+	input[type="submit"] {
+		display: none;
+		position: absolute;
+		right: 1px;
+		top: 50%;
+		height: calc(100% - 2px);
+		cursor: pointer;
+		width: 120px;
+		@include prefix(transform, translateY(-50%));
+		border-radius: 50px;
+		text-transform: uppercase;
+		font-weight: 600;
+		@include prefix(transition, all 125ms);
+	}
+
+	&.date {
+		input {
+			padding-right: 15px;
+		}
+
+		&:after {
+			display: none;
 		}
 	}
 }
 
-
 .filters {
+	background-color: $primary-color;
+	padding: 15px;
+	border-radius: 5px;
+
+	.search input, .select-selected {
+		border-color: $alt-color;
+	}
+
 	input[type="submit"]{
 		display: none;
 	}
