--- a/app/assets/stylesheets/modules/orders.scss
+++ b/app/assets/stylesheets/modules/orders.scss
@@ -23,19 +23,6 @@
 			justify-content: flex-end;
 			align-items: center;
 
-			.sp input {
-				background-color: transparent;
-				cursor: pointer;
-				padding: 10px 15px;
-	      transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-	      white-space: nowrap;
-	      font-size: .75em;
-
-	      &:hover {
-	        background-color: #f4f4f4;
-	      }
-			}
-
 			.right-content {
 				display: flex;
 				align-items: center;
@@ -94,7 +81,7 @@
 
 			.order-cards {
 				display: grid;
-				grid-gap: 15px;
+				grid-gap: 25px 2.5%;
 				grid-template-columns: 1fr 1fr 1fr 1fr;
 
 				&.as-list {
@@ -160,8 +147,7 @@
 				}
 
 				.order-card {
-				  // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-				  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+				  @include prefix(transition, .25s cubic-bezier(.075,.82,.165,1));
 				  border-radius: 5px;
 				  min-width: 200px;
 				  display: flex;
@@ -205,7 +191,6 @@
 							flex-direction: column;
 
 							.order-id {
-								font-size: .9em;
 								font-weight: 700;
 							}
 
@@ -215,7 +200,7 @@
 						}
 
 						.left-content .order-spot, .right-content .order-creation-date {
-							font-size: .75em;
+							font-size: .9em;
 							font-weight: 600;
 							color: rgba(0, 0, 0, 0.5);
 						}
@@ -240,7 +225,7 @@
 				    text-align: center;
 				    height: 100%;
 
-				    h4 {
+				    h3 {
 				    	font-weight: 400;
 				    	margin-bottom: 5px;
 				    }
@@ -251,7 +236,7 @@
 					    -webkit-line-clamp: 3;
 					    -webkit-box-orient: vertical;
 					    overflow: hidden;
-				    	font-size: .75em;
+				    	font-size: .9em;
 				    	font-weight: 700;
 				    }
 					}
@@ -262,7 +247,7 @@
 
 						span {
 							color: rgba(0, 0, 0, 0.5);
-							font-size: .75em;
+							font-size: .9em;
 							font-weight: 600;
 						}
 
@@ -331,13 +316,22 @@
 
 	&.show {
 		.main-panel .main-container .container-body {
-			h3 {
-				text-transform: uppercase;
+			section {
+				h3 {
+					text-transform: uppercase;
+			  	padding: 10px 20px;
+			    background-color: $dark-blue;
+			    color: $primary-color;
+			    display: inline-block;
+			    border-radius: 0 5px 5px 0;
+			    margin-left: -50px;
+			  }
+
+				p {
+					font-size: .9em;
+				}
 			}
 
-			p {
-				font-size: .9em;
-			}
 		}
 	}
 
@@ -373,10 +367,12 @@
 							flex-direction: column;
 							border: none;
 							position: relative;
-							font-size: .75em;
+							font-size: 1em;
+							color: #aaa;
 
 							&:before, &:after {
 								content: "";
+								@include prefix(transition, .25s cubic-bezier(.075,.82,.165,1));
 								border-radius: 50%;
 								margin-bottom: 20px;
 							}
