--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,27 +3,29 @@
 
 	<div class="container main-container">
 		<header class="container-header">
-			<h1 class="header-title text-center">Detalhes do <span>chamado</span></h1>
+			<h1 class="header-title m-b-25">Ordem de <span>serviço</span></h1>
 		</header>
 
 		<section class="container-body">
-    	<div class="flex-row order-info m-b-5">
-    		<div class="flex-col flex-col-12 order-id text-center">
-    			<%= content_tag :h6 do %>
-    				<%= "Chamado ##{@order.id.to_s.rjust(3, '0')}" %>
-    				<%= content_tag :span, " - #{@order.school.name}" if is_admin? %>
-    			<% end %>
-    		</div>
-    	</div>
+  		<section>
+  			<h3 class="m-b-25">
+  				<%= "Chamado ##{@order.id.to_s.rjust(3, '0')}" %>
+  			</h3>
 
-  		<section class="bordered">
+  			<% if is_admin? %>
+	  			<%= content_tag :dl do %>
+	    			<%= content_tag :dt, "Unidade" %>
+	  				<%= content_tag :dd, @order.school.name %>
+	  			<% end %>
+  			<% end %>
+
   			<%= content_tag :dl do %>
-    			<%= content_tag :dt, "Nome do(a) solicitante" %>
+    			<%= content_tag :dt, "Solicitante" %>
   				<%= content_tag :dd, @order.requester %>
   			<% end %>
   		</section>
       		
-  		<section class="bordered">
+  		<section>
   			<h3 class="m-b-25">Informações do equipamento</h3>
 
       	<%= content_tag :dl do %>
@@ -52,7 +54,7 @@
   			<% end %>
   		</section>
 
-  		<section class="bordered">
+  		<section>
   			<h3 class="m-b-25">Relatório</h3>
 
       	<%= content_tag :dl do %>
@@ -85,7 +87,11 @@
   		<%= content_tag :p, class: "m-t-25 text-center" do %>
 				<%= "Manutenção feita por <strong>#{get_user(@order.maintenance_technician)}</strong>".html_safe if !@order.maintenance_technician == 0 %>
 				<%= " e entregue em <strong>#{@order.end_date.strftime("%d/%m/%Y")}</strong>".html_safe if !@order.end_date.nil? %>
-			<% end %>
+			<% end if !@order.maintenance_technician == 0 && !@order.end_date.nil? %>
+
+			<div class="actions m-t-25 text-center">
+        <%= link_to "Voltar", orders_path, class: "btn-cancel" %>
+      </div>
 		</section>
 	</div>
 </div>
