--- a/app/assets/stylesheets/core/_form.scss
+++ b/app/assets/stylesheets/core/_form.scss
@@ -43,7 +43,7 @@
 			color: rgba(0, 0, 0, 0.75);
 
 			&.checked, &:hover {
-				border-color: $dark-blue;
+				border-color: $dark-blue !important;
 				color: $dark-blue !important;
 			}
 		}
