--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -3,7 +3,7 @@
 
 	<div class="container main-container">
 		<header class="container-header">
-			<h1 class="header-title m-b-50">Abertura de <span>chamado</span></h1>
+			<h1 class="header-title">Abertura de <span>chamado</span></h1>
 		</header>
 
   	<%= flash_message %>
