--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,7 +3,7 @@
 
 	<div class="container main-container">
 		<header class="container-header">
-			<h1 class="header-title m-b-25">Ordem de <span>serviço</span></h1>
+			<h1 class="header-title">Ordem de <span>serviço</span></h1>
 		</header>
 
 		<section class="container-body">
