--- a/app/assets/stylesheets/core/_main.scss
+++ b/app/assets/stylesheets/core/_main.scss
@@ -5,3 +5,32 @@
 	align-items: center;
 	justify-content: center;
 }
+
+.main-panel {
+	&, .main-sidebar, .main-container {
+		height: 100%;
+	}
+
+	.main-container {
+		width: 100%;
+		overflow-y: auto;
+		padding: 25px 50px;
+
+		.container-header, .container-body {
+			padding: 25px 0;
+		}
+
+		.container-header {
+			.header-title {
+				font-size: 2em;
+				line-height: 20px;
+				font-weight: 300;
+				text-transform: uppercase;
+
+				span {
+					font-weight: 600;
+				}
+			}
+		}
+	}
+}
