--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
 
     <%= simple_form_for @user, url: new_user_registration_path, html: { class: "form" } do |f| %>
       <%= f.simple_fields_for :school do |s| %>
-        <div class="left-content">
+        <div class="content">
           <p class="m-b-50">Entre com os dados da sua unidade</p>
 
           <p class="segment">Escolha o segmento ao qual sua unidade pertence</p>
@@ -16,13 +16,13 @@
             </div>
 
             <div class="col-5">
-              <%= s.input :zip_code, label: "CEP", label_html: { class: "form-label" }, wrapper_html: { class: "zip-code" } %>
+              <%= s.input :zip_code, label: "CEP", label_html: { class: "form-label" }, wrapper_html: { class: "zip-code" }, input_html: { placeholder: "Ex.: 12345-678", maxlength: 8 } %>
             </div>
           </div>
 
           <div class="fields-inline row">
             <div class="col-6">
-              <%= s.input :address, label: "Logradouro", label_html: { class: "form-label" } %>
+              <%= s.input :address, label: "Logradouro", label_html: { class: "form-label" }, input_html: { placeholder: "Ex.: Rua Um Dois de Oliveira Quatro"} %>
             </div>
 
             <div class="col-3">
@@ -36,29 +36,29 @@
 
           <div class="fields-inline row">
             <div class="col-6">
-              <%= s.input :phone, label: "Telefone", label_html: { class: "form-label" } %>
+              <%= s.input :phone, label: "Telefone", label_html: { class: "form-label" }, input_html: { placeholder: "Ex.: (00) 91234-5678"} %>
             </div>
           </div>
         </div>
 
-        <div class="right-content">
+        <div class="content">
           <p class="m-b-50">Insira suas informações de login</p>
 
-          <div class="fields-inline row">
+          <div class="row">
             <div class="col-12">
-              <%= f.input :username, label: "E-mail da unidade", label_html: { class: "form-label" } %>
+              <%= f.input :username, label: "E-mail da unidade", label_html: { class: "form-label" }, input_html: { placeholder: "unidade@email.com"} %>
             </div>
           </div>
 
-          <div class="fields-inline row">
+          <div class="row">
             <div class="col-12">
-              <%= f.input :password, label: "Senha", label_html: { class: "form-label" }, hint: ("mínimo de #{@minimum_password_length} caracteres" if @minimum_password_length) %>
+              <%= f.input :password, label: "Senha", label_html: { class: "form-label" }, hint: ("mínimo de #{@minimum_password_length} caracteres" if @minimum_password_length), input_html: { placeholder: "**********"} %>
             </div>
           </div>
           
-          <div class="fields-inline row">
+          <div class="row">
             <div class="col-12">
-              <%= f.input :password_confirmation, label: "Confirme sua senha", label_html: { class: "form-label" } %>
+              <%= f.input :password_confirmation, label: "Confirme sua senha", label_html: { class: "form-label" }, input_html: { placeholder: "**********"} %>
             </div>
           </div>
         </div>
